ensure text wraps correctly in the lightbox

--- a/src/nerdbox.css
+++ b/src/nerdbox.css
@@ -5,7 +5,6 @@
   height: 100%;
   width: 100%;
   text-align: center;
-  white-space: nowrap;
   z-index: 99999;
 }
 
